# genparse

./: .coverage.aaron-dev.63870.XSoIEAax  .coveragerc  .gitignore  .pre-commit-config.yaml  404.html  Cargo.toml  Makefile  NOTICE.txt  README.md  benchmark.json  earley_fast.py  genparse_planetarium.py  genparse_planetarium_simplified_english.py  genparse_sql_example.ipynb  genparse_sql_example.py  genparse_sygus.py  genparse_tiny_example.ipynb  genparse_tiny_example.py  index.html  llama-3-sampling-n10-1000.jsonl  llama-3-smc-standard-p10-b10-1000-schema.jsonl  mkdocs.yml  planetarium_eval.py  planetarium_eval_simplified_english.py  plot_callibration.py  pyproject.toml  ruff.toml  run-coverage  run-coverage.bash  run-tests  rust_build.md  setup.py  sygus_eval.py  test_earley_fast.py  vllm_runtime.pkl
.github/workflows/: black.yml  docs.yml  performance-monitoring.yml  pylint.yml  pytest.yml  ruff.yml  space.yml
amp/: README.md  analysis.ipynb  experiments.ipynb  explore_data.py  run_experiment.py  setup.sh
amp/amp/: .gitignore  LICENSE  README.md  setup.py
api/: genparse.html  index.html  search.js
api/genparse/: batch_inference.html  cfg.html  cfglm.html  chart.html  fst.html  lark_interface.html  linear.html  lm.html  parse.html  proposal.html  record.html  segmentation.html  semiring.html  tokenization.html  trace.html  trace1.html  util.html  wfsa.html
bench/: README.md  cache.py  draft.py  run_calflow_baseline.py  run_calflow_genparse.py  run_inference.py  run_spider_baseline.py  run_spider_genparse.py  run_spider_llama2_chat.py  run_spider_poe.py  run_spider_vllm.py  schema_grammar_coverage.py
bench/ben_experiments/: evaluation_utils.py  run_baseline.py  run_baseline.sh  run_character.sh  run_genparse.py  run_genparse.sh  run_token.sh  smc_vs_sis.ipynb
bench/calflow/: __init__.py  bm25_index.py  datum.py  fewshot.py
bench/spider/: __init__.py  content_encoder.py  dialogue.py  evaluation.py  evaluator.py  interface.py  paths.py  process_sql.py  prompt_formatter.py  schema.py  utils.py
benchmark/: Spider.ipynb  batch_benchmarking.sh  benchclamp_to_cfg.py  benchmark_autoregressive_char_aligned_cfglm.py  benchmark_inference.py  benchmark_vllm_inference.py  example_grammars.py  make_planetarium_prompt.py  run.py  run_spider_genparse.py  sql_grammar_coverage.py  sql_parsing_speed.py  test_autoregressive_char_aligned_cfglm.py  test_sql_parsing_speed.py  work-in-progress.py
benchmark/datasets/: spider_dev_set.txt
benchmark/grammars/: basic_calc.lark  blocksworld.lark  blocksworld_goal_simplified_english.lark  blocksworld_init_simplified_english.lark  blocksworld_restricted.lark  blocksworld_simplified_english.lark  blocksworld_whitespace.lark  restricted_sql.lark  simple_json.lark  sm_calflow_utterance_scfg.lark  smcalflow.lark  sql_case_insensitive.lark  sql_case_sensitive.lark  sygus.lark  tiny_sql.lark  us_lpm_grammar.lark
contributing/: index.html
docs/: README.md  contributing.md  getting_started.md  index.md  jupyter_examples.md  troubleshooting.md  usage_guide.md  visualizing_inference.md
docs/api/: search.js
examples/: genparse_sql_example.py  genparse_tiny_example.ipynb  genparse_tiny_example.py
genparse/: __init__.py  align.py  batch_propose.py  cfg.py  cfglm.py  chart.py  examples.py  fst.py  inference.py  lark_interface.py  linear.py  lm.py  record.py  segmentation.py  semiring.py  steer.py  tdcky.py  tokenization.py  trace.py  util.py  vllm_compatibility.py  vllm_inference.py  vllm_steer.py
genparse/align/: __init__.py  graft.py  (+3 more)
getting_started/: index.html
grammars/: restricted_sql.lark  tiny_sql.lark
jupyter_examples/: index.html
notes/: A-Tale-of-Two-Transducers.ipynb  CFG-FST.ipynb  Character-at-a-Time.ipynb  Compare-Proposals.ipynb  Crunching.ipynb  Earley-profiling.ipynb  FST.ipynb  GAD.py  Inference-Playground.ipynb  LL.py  LM-Fun.ipynb  Lark-Interface.ipynb  SegTokenAligner.ipynb  Segmentation-PFST.ipynb  Spinning-Up-GenParse.ipynb  Token-Alignment.ipynb  Token-Healing.ipynb  benchmark_berglund.py  benchmark_hfppl.py  compare-proposals-by-enumeration.ipynb  fst-scalability.py  fst_pruned_composition.py  grammar_processing_issues.ipynb  helpers.py  hfppl.ipynb  hfppl_benleb.ipynb  hfppl_for_tim_o.ipynb  hfppl_jac.ipynb  hfppl_jac_example_record.pickle  intersection.py  lark_grammar_case_insensitivity.py  larklm.py  original_prefix_grammar.py  parallel_benchmarking.ipynb  smc_visualization.ipynb  sql_debug.ipynb  tdcky.py  test_grammar_coverage.py  test_inference.py  test_sql_parsing_speed.py  (+1 more)
perf_tests/: lorem_ipsum.py  test_inference.py  test_tiny_example.py
scripts/: install.sh
search/: search_index.json
src/: bool_earley.rs  lib.rs
tests/: examples.py  test_align.py  test_align_trie.py  test_autoregressive_char_aligned_cfglm.py  test_batch_inference.py  test_berglund_bpe_dfa.py  test_cfglm.py  test_char_aligned_cfglm.py  test_character_proposal.py  test_crunching.py  test_earley.py  test_earley_fast.py  test_earley_rescaled.py  test_expectation.py  test_fst.py  test_gad.py  test_genparse_tiny_example.py  test_inference.py  test_inference_consistency.py  test_inference_setup.py  test_intersection.py  test_lark_interface.py  test_linear.py  test_lm.py  test_prefix.py  test_segmentation.py  test_step_condition.py  test_system.py  test_token_proposal.py  test_tokenization.py  test_trace.py  test_twist.py  test_wcfg.py  test_wfsa_field.py  test_wfsa_semiring.py
troubleshooting/: index.html
visualizing_inference/: index.html
(+360 files in other folders)
