[package]
name = "genpa-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "genpa_rs"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
pyo3 = "0.22.0"  # for python binding
priority-queue = "2.0"  # for parser
approx = "0.5.1"  # for floating point comparison in tests
